# Framer

./: .gitmodules  CONTRIBUTING.md  Justfile  README.md  build.zig  build.zig.zon
.github/: FUNDING.yml
frame-server/: build.zig  build.zig.zon
godot/: GraphEditTest.tscn  frame_ble_node.gd  frame_lua_node.gd  global.gd  godot-frame.gdextension  icon.svg.import  project.godot
godot-bindings/: build.zig  build.zig.zon
rust/: Cargo.toml
rust/bindings/: Cargo.toml
rust/bindings/src/: lib.rs
rust/frame-repl/: Cargo.toml
rust/frame-repl/lua-scripts/: main.lua
rust/frame-repl/src/: main.rs
rust/frame-server/: Cargo.toml
rust/frame_repl/: Cargo.toml
rust/frame_repl/src/: main.rs  main.rs.bak
rust/frame_server/: Cargo.toml
rust/frame_server/src/: main.rs
rust/src/: lib.rs
