[package]
name = "godot-frame"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
btleplug = { version = "0.11.5", features = ["serde"] }
futures = "0.3.30"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
mlua = { version = "0.9.9", features = ["lua54"] }
serde = "1.0.210"
tokio = "1.40.0"
uuid = "1.10.0"
