[package]
name = "btleplug-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.5"
crossterm = "0.28.1"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tui = "0.19.0"
uuid = "1.10.0"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"]}
